--- a/gradle/maven.gradle
+++ b/gradle/maven.gradle
@@ -8,6 +8,25 @@ subprojects {
         sign configurations.archives
     }
 
+    uploadArchives {
+
+        def artifactoryUrl = rootProject.hasProperty('artifactoryUrl')?rootProject.artifactoryUrl:''
+        def artifactoryUsername = rootProject.hasProperty('artifactoryUsername')?rootProject.artifactoryUsername:''
+        def artifactoryPassword = rootProject.hasProperty('artifactoryPassword')?rootProject.artifactoryPassword:''
+
+        repositories.mavenDeployer {
+            // hack to make sure that newer versions of this jar are recognized as such
+            pom.project {
+                properties {
+                    'timestamp' String.valueOf(System.currentTimeMillis())
+                }
+            }
+            repository(url: artifactoryUrl) {
+                authentication(userName: artifactoryUsername, password: artifactoryPassword)
+            }
+        }
+    }
+
 /**
  * Publishing to Maven Central example provided from http://jedicoder.blogspot.com/2011/11/automated-gradle-project-deployment-to.html
  * artifactory will execute uploadArchives to force generation of ivy.xml, and we don't want that to trigger an upload to maven
